@@ -7,8 +7,11 @@ because OS X does not provide the le32toh() and htole32() functions.)
 [2] The non-SIMD RGB565 color conversion code did not work correctly on big
 endian machines.  This has been fixed.
 
-[3] Fixed an issue in tjPlaneSizeYUV() whereby it was erroneously returning 1
+[3] Fixed an issue in tjPlaneSizeYUV() whereby it would erroneously return 1
 instead of -1 if componentID was > 0 and subsamp was TJSAMP_GRAY.
+
+[3] Fixed an issue in tjBufSizeYUV2() wherby it would erroneously return 0
+instead of -1 if width was < 1.
 
 
 1.3.90 (1.4 beta1)
